// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.block";
option java_outer_classname = "eosblock";
option objc_class_prefix = "HLW";

package force_block;

// The greeting service definition.
service grpc_block {
  // Sends a greeting
  rpc rpc_sendaction (BlockRequest) returns (BlockReply) {}
}

message BlockTransRequest {
  string trx = 1;
  string trxid = 2;
}

// The request message containing the user's name.
message BlockRequest {
  int32 blocknum = 1;
  repeated BlockTransRequest trans = 2;
}



// The response message containing the greetings
message BlockReply {
  string reply = 1;
  string message = 2;
}
